--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 <!-- Latest compiled and minified JavaScript -->
 <script src=https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js></script> 
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script><html lang="zh-cn">
-<html lang="zh-CN">
+<html lang="zh-CN">
+
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -258,7 +259,7 @@
         <h4 class="modal-title" id="myModalLabel">Modal title</h4>
       </div>
       <div class="modal-body">
-        <img class="img" src="./11.jpg" alt="Generic placeholder image" width="693" height="520">
+        <img class="img" src="./11.JPG" alt="Generic placeholder image" width="693" height="520">
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -280,7 +281,7 @@
         <h4 class="modal-title" id="myModalLabel">Modal title</h4>
       </div>
       <div class="modal-body">
-        <img class="img" src="./12.jpg" alt="Generic placeholder image" width="693" height="520">
+        <img class="img" src="./12.JPG" alt="Generic placeholder image" width="693" height="520">
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -302,7 +303,7 @@
         <h4 class="modal-title" id="myModalLabel">Modal title</h4>
       </div>
       <div class="modal-body">
-        <img class="img" src="./13.jpg" alt="Generic placeholder image" width="732" height="520">
+        <img class="img" src="./13.JPG" alt="Generic placeholder image" width="732" height="520">
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
